Quartz sync: Mar 3, 2024, 9:34 PM

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,3 +1,9 @@
 @use "./base.scss";
 
 // put your custom CSS here!
+// Custom font
+:root {
+    --headerFont: "Computer Modern Serif", serif !important;
+    --bodyFont: "Computer Modern Serif", serif !important;
+    --codeFont: "Computer Modern Typewriter", monospace !important;
+}
