Quartz sync: Mar 6, 2024, 7:42 PM

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -2,8 +2,8 @@
 
 // put your custom CSS here!
 // Custom font
-:root {
-    --headerFont: "Computer Modern Serif", serif !important;
-    --bodyFont: "Computer Modern Serif", serif !important;
-    --codeFont: "Computer Modern Typewriter", monospace !important;
-}
+// :root {
+// --headerFont: "Computer Modern Serif", serif !important;
+// --bodyFont: "Computer Modern Serif", serif !important;
+// --codeFont: "Computer Modern Typewriter", monospace !important;
+// }
